--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/dm-sans": "^5.0.21",
     "@fontsource/dm-serif-text": "^5.0.20",
     "@fontsource/donegal-one": "^5.0.20",
+    "@fontsource/inter": "^5.0.20",
     "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
